--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 skipsdist = True
-envlist = py37, py38, py39, lint
-
+envlist = py38, py39, lint
+[flake8]
+ignore = E501,E277
 [testenv:lint]
 deps =
     .[test]
