--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -42,6 +42,9 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 cellpack --count --verbose --show-source --statistics
+    - name: Run flake8 on your PR - with annotations!
+      uses: tayfun/flake8-your-pr@1.0.1
     - name: Check with black
       run: |
         black --check cellpack
+
