--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.7, 3.8, 3.9]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -42,6 +42,9 @@ jobs:
     - name: Lint with flake8
       run: |
         flake8 cellpack --count --verbose --show-source --statistics
+    - name: Run flake8 on your PR - with annotations!
+      uses: tayfun/flake8-your-pr@1.0.1
     - name: Check with black
       run: |
         black --check cellpack
+
