--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 skipsdist = True
 envlist = py38, py39, lint
 [flake8]
-ignore = E501,E277
+ignore = E501,E277,W503
 [testenv:lint]
 deps =
     .[test]
