--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ skipsdist = True
 envlist = py38, py39, lint
 [flake8]
 ignore = E501,E277,W503
+exclude = cellpack/mgl_tools
 [testenv:lint]
 deps =
     .[test]
