--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     .[test]
 commands =
     flake8 cellpack --count --verbose --show-source --statistics
-    black --check cellpack
+    black --check cellpack --exclude '/cellpack/mgl_tools/'
 
 [testenv]
 setenv =
