--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 skipsdist = True
 envlist = py38, py39, lint
 [flake8]
-ignore = E501,E277,W503
+ignore = E501,E277,W503,E203
 exclude = cellpack/mgl_tools
 [testenv:lint]
 deps =
