--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -44,5 +44,5 @@ jobs:
         flake8 cellpack --count --verbose --show-source --statistics
     - name: Check with black
       run: |
-        black --check cellpack
+        black --check cellpack --exclude '/cellpack/mgl_tools/'
 
