Feature/additional test recipes (#3)
* read json files

* removed partner setup function

* pack figure b recipe

* remove print statement

* fix int error

* clean up requests and add clearer errors

* added figure C recipe

* added additional options and scripts for recipe C

* include pycollada

* bugfixes

* update readme

* format files

* add comment about jitter_place

* add back in jitterMax for 3d

* contain ludos changes plus some import cleanup (#4)

* contain ludos changes plus some import cleanup

* remove accidental typo

* copy in collada

* removed local collada

* delint

* change to quaterion

* delint and format

* excluding formating of mgl_tools

* calling collectResultperingredient

* change actions to only 3.8

* format files with new version of black

--- a/tox.ini
+++ b/tox.ini
@@ -2,14 +2,14 @@
 skipsdist = True
 envlist = py38, py39, lint
 [flake8]
-ignore = E501,E277,W503
+ignore = E501,E277,W503,E203
 exclude = cellpack/mgl_tools
 [testenv:lint]
 deps =
     .[test]
 commands =
     flake8 cellpack --count --verbose --show-source --statistics
-    black --check cellpack
+    black --check cellpack --exclude '/cellpack/mgl_tools/'
 
 [testenv]
 setenv =
