--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.8]
         os: [ubuntu-latest, windows-latest, macOS-latest]
 
     steps:
@@ -34,7 +34,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v1
       with:
-        python-version: 3.9
+        python-version: 3.8
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
@@ -44,5 +44,5 @@ jobs:
         flake8 cellpack --count --verbose --show-source --statistics
     - name: Check with black
       run: |
-        black --check cellpack
+        black --check cellpack --exclude '/cellpack/mgl_tools/'
 
