rapid packing in 2D working

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,env,ingredient,grid
+keys=root,env,ingredient,grid,recipe,autopack
 
 [handlers]
 keys=consoleHandler
@@ -11,19 +11,29 @@ keys=simpleFormatter
 level=INFO
 handlers=consoleHandler
 
+[logger_autopack]
+level=CRITICAL
+qualname=autopack
+handlers=consoleHandler
+
 [logger_env]
-level=INFO
+level=CRITICAL
 qualname=env
 handlers=consoleHandler
 
 [logger_grid]
-level=CRITICAL
+level=INFO
 qualname=grid
 handlers=consoleHandler
 
 [logger_ingredient]
 level=CRITICAL
 qualname=ingredient
+handlers=consoleHandler
+
+[logger_recipe]
+level=CRITICAL
+qualname=recipe
 handlers=consoleHandler
 
 [handler_consoleHandler]
