jitter and rapid packing, but with overlaps

--- a/logging.conf
+++ b/logging.conf
@@ -1,5 +1,5 @@
 [loggers]
-keys=root,env,ingredient,grid,recipe,autopack
+keys=root,env,ingredient,grid,recipe,autopack,compartment
 
 [handlers]
 keys=consoleHandler
@@ -16,18 +16,23 @@ level=CRITICAL
 qualname=autopack
 handlers=consoleHandler
 
+[logger_compartment]
+level=CRITICAL
+qualname=compartment
+handlers=consoleHandler
+
 [logger_env]
 level=CRITICAL
 qualname=env
 handlers=consoleHandler
 
 [logger_grid]
-level=INFO
+level=CRITICAL
 qualname=grid
 handlers=consoleHandler
 
 [logger_ingredient]
-level=CRITICAL
+level=INFO
 qualname=ingredient
 handlers=consoleHandler
 
@@ -42,5 +47,5 @@ formatter=simpleFormatter
 args=(sys.stdout,)
 
 [formatter_simpleFormatter]
-format=%(asctime)s - %(name)s - %(levelname)s - %(message)s
+format=%(asctime)s - %(name)s - %(levelname)s - %(filename)s:%(lineno)s - %(funcName)20s(): %(message)s
 datefmt=
