showing plotly plot

--- a/logging.conf
+++ b/logging.conf
@@ -32,7 +32,7 @@ qualname=grid
 handlers=consoleHandler
 
 [logger_ingredient]
-level=INFO
+level=CRITICAL
 qualname=ingredient
 handlers=consoleHandler
 
