calculating dimension from the data
calculating dimension from the data

--- a/packing-configs/debug-config.json
+++ b/packing-configs/debug-config.json
@@ -9,7 +9,7 @@
     "overwrite_place_method": false,
     "place_method": "jitter",
     "save_analyze_result": true,
-    "show_grid_plot": false,
+    "show_grid_plot": true,
     "spacing": null,
     "use_periodicity": false
 }
