--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -49,10 +49,10 @@ jobs:
         pip install .[test]
     - name: Lint with flake8
       run: |
-        flake8 cellpack --count --verbose --show-source --statistics
+        flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
     - name: Check with black
       run: |
-        black --check cellpack --exclude '/cellpack/mgl_tools/'
+        black --check cellpack
 
   publish:
     if: "contains(github.event.head_commit.message, 'Bump version')"
