--- a/.github/workflows/test-and-lint.yml
+++ b/.github/workflows/test-and-lint.yml
@@ -41,8 +41,8 @@ jobs:
         pip install .[test]
     - name: Lint with flake8
       run: |
-        flake8 cellpack --count --verbose --show-source --statistics
+        flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
     - name: Check with black
       run: |
-        black --check cellpack --exclude '/cellpack/mgl_tools/'
+        black --check cellpack
 
