add ignore script

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ exclude = cellpack/mgl_tools
 deps =
     .[test]
 commands =
-    flake8 cellpack --count --verbose --show-source --statistics
+    flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
     black --check cellpack --exclude '/cellpack/mgl_tools/'
 
 [testenv]
