--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps =
     .[test]
 commands =
     flake8 cellpack --count --verbose --show-source --statistics --ignore=E501,E277,W503,E203
-    black --check cellpack --exclude '/cellpack/mgl_tools/'
+    black --check cellpack
 
 [testenv]
 setenv =
