--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.9, 3.8]
+        python-version: [3.8]
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v1
