--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,8 +19,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-        
-    - run: pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
+    - name: Analyze packing    
+      run: pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
+      working-directory: ./
     - name: comment PR
       uses: machine-learning-apps/pr-comment@master
       env:
