--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,9 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
+    - run: pwd
     - name: Analyze packing    
       run: pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
-      working-directory: ./
+      working-directory: cellpack/
     - name: comment PR
       uses: machine-learning-apps/pr-comment@master
       env:
