--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,8 +19,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .
-    - run: echo ${GITHUB_WORKSPACE}
-    - name: Analyze packing    
+    - name: Analyze packing
+      run: cd ${GITHUB_WORKSPACE}
       run: pack -r tests/recipes/test_spheres.json -c tests/packing-configs/test_config.json
       working-directory: cellpack/
     - name: comment PR
