--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -21,6 +21,7 @@ jobs:
         pip install .
     - name: Analyze packing
       run: |
+        echo ${GITHUB_WORKSPACE}
         cd ${GITHUB_WORKSPACE}
         pack -r tests/recipes/test_spheres.json -c tests/packing-configs/test_config.json
       working-directory: cellpack/
