--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -23,6 +23,8 @@ jobs:
       run: |
         echo ${GITHUB_WORKSPACE}
         cd ${GITHUB_WORKSPACE}
+        conda init bash
+        exec bash
         conda activate autopack
         pack -r tests/recipes/test_spheres.json -c tests/packing-configs/test_config.json
       working-directory: cellpack/
