--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -12,17 +12,21 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version }}
+        cache: 'pip' # caching pip dependencies
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install .
+        pip install .[test]
     - name: Analyze packing
       run: |
-        pack -r tests/recipes/test_spheres.json -c tests/packing-configs/test_config.json
-      working-directory: cellpack/
+        pack -r cellpack/tests/recipes/test_spheres.json
+    - name: Download
+      - uses: actions/download-artifact@v3
+      - name: Display structure of downloaded files
+        run: ls -R
     - name: comment PR
       uses: machine-learning-apps/pr-comment@master
       env:
