--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -20,15 +20,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[test]
-    - name: Analyze packing
-      run: |
-        pack -r cellpack/tests/recipes/test_spheres.json
-    - name: Download
-      - uses: actions/download-artifact@v3
-      - name: Display structure of downloaded files
-        run: ls -R
-    - name: comment PR
-      uses: machine-learning-apps/pr-comment@master
+  Download:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/download-artifact@v3
+    - name: Display structure of downloaded files
+      run: ls -R
+  Comment:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: machine-learning-apps/pr-comment@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
