--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -22,6 +22,7 @@ jobs:
         pip install .[test]
   Download:
     runs-on: ubuntu-latest
+    needs: [analyze]
     steps:
     - uses: actions/download-artifact@v3
     - name: Display structure of downloaded files
