--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,6 +19,14 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[test]
+    - name: Analyze packing
+      run: |
+        pack -r cellpack/tests/recipes/test_spheres.json
+    - name: Upload
+      uses: actions/upload-artifact@v3
+      with:
+        name: results
+        path: cellpack/tests/outputs/test_spheres/jitter/
   Download:
     runs-on: ubuntu-latest
     needs: [analyze]
