--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -25,8 +25,8 @@ jobs:
     - name: Upload
       uses: actions/upload-artifact@v3
       with:
-        name: results
-        path: cellpack/tests/outputs/test_spheres/jitter/
+        name: results_seed_0ext__A_histo_X
+        path: out/test_spheres/jitter/
   Download:
     runs-on: ubuntu-latest
     needs: [analyze]
@@ -35,6 +35,7 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R
   Comment:
+    needs: [analyze]
     runs-on: ubuntu-latest
     steps:
     - uses: machine-learning-apps/pr-comment@master
