--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -35,6 +35,7 @@ jobs:
     - name: Display structure of downloaded files
       run: ls -R
     - name: Report
+      uses: actions/checkout@v3
     - run: | 
         echo "## Metrics report" > report.md
         cml-publish results/results_seed_0ext__A_histo_X.png --md >> report.md
