--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -34,6 +34,7 @@ jobs:
     - uses: actions/download-artifact@v3
     - name: Display structure of downloaded files
       run: ls -R
+    - uses: iterative/setup-cml@v1
     - name: Report
       run: | 
         echo "## Metrics report" > report.md
