--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -37,6 +37,6 @@ jobs:
     - uses: iterative/setup-cml@v1
     - name: Report
       run: | 
-        echo "## Metrics report" > report.md
-        cml-publish results/results_seed_0ext__A_histo_X.png --md >> report.md
-        cml-send-comment report.md
+        cat "## Metrics report"  >> report.md
+        echo '![](./results/results_seed_0ext__A_histo_X.png)' >> report.md
+        cml comment create --publish report.md
