--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -42,4 +42,4 @@ jobs:
       run: | 
         echo "## Metrics report"  >> report.md
         cml publish ./results/results_seed_0ext__A_histo_X.png --md >> report.md
-        cml send-comment report.md
+        cml send-comment report.md --pr
