analyze gradients with peroxisomes

--- a/cellpack/analysis-configs/peroxisomes_analysis_config.json
+++ b/cellpack/analysis-configs/peroxisomes_analysis_config.json
@@ -9,8 +9,8 @@
         "outer": "data/mean-membrane.obj"
     },
     "run_similarity_analysis": true,
-    "get_parametrized_representation": true,
+    "get_parametrized_representation": false,
     "save_plots": true,
-    "get_correlations": true,
+    "get_correlations": false,
     "max_plots_to_save": 1
 }
