--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -41,4 +41,4 @@ jobs:
       env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
-        cml send-comment analysis_report.md --pr
+        cml comment create analysis_report.md --pr
