--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -36,6 +36,7 @@ jobs:
     - uses: actions/download-artifact@v3
     - name: Display structure of downloaded files
       run: ls -R
+      run: cat ./results/analysis_report.md
     - uses: iterative/setup-cml@v1
     - name: Report
       env:
