--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,11 +19,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Analyze packing
+    - name: Pack test recipe
       run: |
         pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
-        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
-    - name: Upload
+    - name: Upload results
       uses: actions/upload-artifact@v3
       with:
         name: results
@@ -37,11 +36,16 @@ jobs:
     - name: Display structure of downloaded files
       run: |
         ls -R
+    - name: Create analysis report
+      run: |
+        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
     - uses: iterative/setup-cml@v1
-    - name: Report
+    - name: Update comment
       env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
         cml asset publish ./results/jitter/total_ingredient_distances_test_spheres_test_config.png --md >> ./results/analysis_report.md
         cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --pr
+    - name: Show contents of report
+      run: |
         cat ./results/analysis_report.md
