--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,33 +19,29 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Pack test recipe
+    - name: Analyze packing
       run: |
         pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
-    - name: Upload results
+        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
+    - name: Upload
       uses: actions/upload-artifact@v3
       with:
         name: results
         path: cellpack/tests/outputs/test_spheres/
-    - name: Display structure of downloaded files
-      run: |
-        ls -R
-    - name: Create analysis report
-      run: |
-        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
   Comment:
     runs-on: ubuntu-latest
     needs: [Analyze]
     steps:
     - uses: actions/checkout@v2
     - uses: actions/download-artifact@v3
+    - name: Display structure of downloaded files
+      run: |
+        ls -R
     - uses: iterative/setup-cml@v1
-    - name: Update comment
+    - name: Report
       env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
-        cml asset publish ./results/jitter/total_ingredient_distances_test_spheres_test_config.png --md >> ./results/analysis_report.md
+      
         cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --pr
-    - name: Show contents of report
-      run: |
         cat ./results/analysis_report.md
