--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,11 +19,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Analyze packing
+    - name: Pack test recipe
       run: |
         pack -r cellpack/tests/recipes/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
         analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
-    - name: Upload
+    - name: Upload results
       uses: actions/upload-artifact@v3
       with:
         name: results
@@ -38,10 +38,9 @@ jobs:
       run: |
         ls -R
     - uses: iterative/setup-cml@v1
-    - name: Report
+    - name: Update comment
       env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
-      
         cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --pr
         cat ./results/analysis_report.md
