--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -37,6 +37,15 @@ jobs:
     - name: Display structure of downloaded files
       run: |
         ls -R
+    - uses: actions/checkout@v3
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1-node16
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
+    - name: Copy files to results bucket
+      run: aws s3 sync ./results s3://cellpack-results --delete
     - uses: iterative/setup-cml@v1
     - name: Update comment
       env:
