--- a/packing-configs/peroxisome_packing_config.json
+++ b/packing-configs/peroxisome_packing_config.json
@@ -4,12 +4,13 @@
     "inner_grid_method": "trimesh",
     "live_packing": false,
     "ordered_packing": false,
-    "num_trials": 100,
+    "num_trials": 1,
     "out": "out/analyze",
-    "overwrite_place_method": false,
+    "overwrite_place_method": true,
     "place_method": "spheresSST",
     "save_analyze_result": true,
     "show_grid_plot": false,
+    "save_plot_figures": false,
     "spacing": 2.5,
     "use_periodicity": false,
     "show_sphere_trees": false,
