--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -40,8 +40,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
     - uses: actions/download-artifact@v3
+    - name: Remove files in results bucket
+      run: aws s3 rm  s3://cellpack-results --recursive
     - name: Copy files to results bucket
-      run: aws s3 sync ./results s3://cellpack-results --delete
+      run: aws s3 cp ./results s3://cellpack-results --recursive --acl public-read 
     - uses: iterative/setup-cml@v1
     - name: Update comment
       env:
