add path to script

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Pack test recipe
       run: |
         pack -r cellpack/tests/recipes/v2/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
-        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json
+        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json -r cellpack/tests/recipes/v2/test_spheres.json 
     - name: Upload results
       uses: actions/upload-artifact@v3
       with:
