Modified gh action scripts to create a new sub_directory in s3 whenever a new PR is created. Also deletes the sub_directory when branch is merged to main
Modified author due to issues with git setup

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,3 +87,12 @@ jobs:
       with:
         user: meganrm
         password: ${{ secrets.PYPI_TOKEN }}
+
+  cleanup:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Create environment variable from PR name
+      run: echo "BRANCH_NAME"=${{ github.ref }}" > $GITHUB_ENV
+    - name: Remove files in results bucket
+      run: aws s3 rm  s3://cellpack-results/$BRANCH_NAME --recursive
