--- a/examples/analysis-configs/gradient_analysis_config.json
+++ b/examples/analysis-configs/gradient_analysis_config.json
@@ -1,7 +1,7 @@
 {
     "version": "1.0.0",
     "format_version": "1.0",
-    "input_path": "out/gradients_X/jitter/",
+    "packing_result_path_list": "out/gradients_X/jitter/",
     "output_path": "out/gradients_X/",
     "ingredient_key" : "ext_A",
     "run_similarity_analysis": true,
