update deprecated argument

--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -49,5 +49,5 @@ jobs:
       env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: | 
-        cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --pr
+        cml comment update --watermark-title="{workflow} report" ./results/analysis_report.md --target=pr
         cat ./results/analysis_report.md
