--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -19,7 +19,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install .[all]
-    - name: Set PR name environment variable 
+    - name: Set PR name environment variable
       run: | 
         echo "PR_NAME=${{ github.head_ref }}" >> $GITHUB_ENV
     - name: Pack test recipe
@@ -32,9 +32,8 @@ jobs:
         NEW_JSON=$(echo "JSON" | jq '. + {"results_output_path": "https://cellpack-results.s3.us-west-2.amazonaws.com/${PR_NAME}/jitter"})
 
         echo "$NEW_JSON" > cellpack/tests/analysis-configs/PR_analysis_config.json
-    -name: Run analysis code
-      run: |
-        analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json 
+    - name: Run analysis code
+      run: analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json 
     - name: Upload results
       uses: actions/upload-artifact@v3
       with:
