--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -28,8 +28,7 @@ jobs:
     - name: Modify JSON with PR sub_directory path
       run: |
         JSON=$(cat cellpack/tests/analysis-configs/PR_analysis_config.json)
-
-        NEW_JSON=$(echo "JSON" | jq '. + {"results_output_path": "https://cellpack-results.s3.us-west-2.amazonaws.com/${PR_NAME}/jitter"})
+        NEW_JSON=$(echo "JSON" | jq '.' + {"results_output_path": "https://cellpack-results.s3.us-west-2.amazonaws.com/${PR_NAME}/jitter"})
 
         echo "$NEW_JSON" > cellpack/tests/analysis-configs/PR_analysis_config.json
     - name: Run analysis code
