--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -24,7 +24,7 @@ jobs:
         pack -r cellpack/tests/recipes/v2/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
     - name: Modify JSON with PR sub_directory path
       run: |
-        jq -i --arg branch_name "$GITHUB_REF_NAME" '.create_report.results_output_path |= "https://cellpack-results.s3.us-west-2.amazonaws.com/\($branch_name)/spheresSST"' path/to/file.json
+        jq --in-place --arg branch_name "$GITHUB_REF_NAME" '.create_report.results_output_path |= "https://cellpack-results.s3.us-west-2.amazonaws.com/\($branch_name)/spheresSST"' cellpack/tests/analysis-configs/PR_analysis_config.json
     - name: Run analysis code
       run: analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json 
     - name: Upload results
