--- a/examples/packing-configs/peroxisome_packing_config.json
+++ b/examples/packing-configs/peroxisome_packing_config.json
@@ -4,7 +4,7 @@
     "inner_grid_method": "trimesh",
     "live_packing": false,
     "ordered_packing": false,
-    "num_trials": 1,
+    "number_of_packings": 1,
     "out": "out/analyze",
     "overwrite_place_method": true,
     "place_method": "spheresSST",
