--- a/.github/workflows/analyze.yml
+++ b/.github/workflows/analyze.yml
@@ -24,7 +24,7 @@ jobs:
         pack -r cellpack/tests/recipes/v2/test_spheres.json -c cellpack/tests/packing-configs/test_config.json
     - name: Modify JSON with PR sub_directory path
       run: |
-        jq --arg branch_name "${{  github.head_ref  }}" '.create_report.results_output_path |= "https://cellpack-results.s3.us-west-2.amazonaws.com/\($branch_name)/spheresSST"' cellpack/tests/analysis-configs/PR_analysis_config.json > cellpack/tests/analysis-configs/PR_analysis_config_temp.json
+        jq --arg branch_name "${{  github.ref_name  }}" '.create_report.results_output_path |= "https://cellpack-results.s3.us-west-2.amazonaws.com/\($branch_name)/spheresSST"' cellpack/tests/analysis-configs/PR_analysis_config.json > cellpack/tests/analysis-configs/PR_analysis_config_temp.json
         mv cellpack/tests/analysis-configs/PR_analysis_config_temp.json cellpack/tests/analysis-configs/PR_analysis_config.json
     - name: Run analysis code
       run: analyze -a cellpack/tests/analysis-configs/PR_analysis_config.json 
@@ -46,7 +46,7 @@ jobs:
         aws-region: us-west-2
     - uses: actions/download-artifact@v3
     - name: Copy files to results bucket
-      run: aws s3 cp ./results s3://cellpack-results/${{  github.head_ref  }}/ --recursive --acl public-read 
+      run: aws s3 cp ./results s3://cellpack-results/${{  github.ref_name  }}/ --recursive --acl public-read 
     - uses: iterative/setup-cml@v1
     - name: Update comment
       env:
