--- a/.github/workflows/cleanup.yml
+++ b/.github/workflows/cleanup.yml
@@ -14,9 +14,5 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y awscli
     - name: Remove files in results sub_dir
-      run: |
-        if aws s3 ls s3://cellpack-results/${{  github.head_ref  }}/ ; then
-          aws s3 rm s3://cellpack-results/${{  github.head_ref  }} --recursive
-        else:
-          echo "The specified path does not exist"
-        fi
+      if: aws s3 ls s3://cellpack-results/${{  github.head_ref  }}
+      run: aws s3 rm s3://cellpack-results/${{  github.head_ref  }} --recursive
