--- a/examples/analysis-configs/peroxisomes_analysis_config.json
+++ b/examples/analysis-configs/peroxisomes_analysis_config.json
@@ -2,18 +2,13 @@
     "version": "1.0.0",
     "format_version": "1.0",
     "similarity_analysis": {
-        "ingredient_key" : "membrane_interior_peroxisome",
-        "load_from_file": true,
+        "ingredient_key" : "membrane_interior_endosome",
         "save_heatmaps": true,
-        "save_path": "out/analyze/peroxisomes_surface_gradient/",
-        "mesh_paths" : {
-            "inner": "data/mean-nuc.obj",
-            "outer": "data/mean-membrane.obj"
-        }
+        "recalculate": true
     },
     "parametrized_representation": {
-        "ingredient_key" : "membrane_interior_peroxisome",
-        "num_angular_points": 8,
+        "ingredient_key" : "membrane_interior_endosome",
+        "num_angular_points": 32,
         "save_plots": true,
         "max_plots_to_save": 2,
         "get_correlations": false,
