--- a/examples/packing-configs/parallel_packing_config.json
+++ b/examples/packing-configs/parallel_packing_config.json
@@ -9,11 +9,11 @@
     "overwrite_place_method": true,
     "place_method": "spheresSST",
     "save_analyze_result": true,
-    "show_grid_plot": false,
+    "show_grid_plot": true,
     "save_plot_figures": false,
-    "spacing": null,
+    "spacing": 1,
     "use_periodicity": false,
     "show_sphere_trees": false,
     "load_from_grid_file": true,
-    "parallel": true
+    "parallel": false
 }
