--- a/examples/packing-configs/parallel_packing_config.json
+++ b/examples/packing-configs/parallel_packing_config.json
@@ -4,16 +4,16 @@
     "inner_grid_method": "trimesh",
     "live_packing": false,
     "ordered_packing": false,
-    "number_of_packings": 10,
+    "number_of_packings": 100,
     "out": "out/parallel",
     "overwrite_place_method": true,
     "place_method": "spheresSST",
     "save_analyze_result": true,
     "show_grid_plot": true,
-    "save_plot_figures": false,
+    "save_plot_figures": true,
     "spacing": 1,
     "use_periodicity": false,
     "show_sphere_trees": false,
     "load_from_grid_file": true,
-    "parallel": false
+    "parallel": true
 }
