--- a/examples/packing-configs/pcna_parallel_packing_config.json
+++ b/examples/packing-configs/pcna_parallel_packing_config.json
@@ -9,23 +9,12 @@
     "place_method": "spheresSST",
     "save_analyze_result": true,
     "show_grid_plot": false,
-    "save_plot_figures": true,
-    "parallel": false,
+    "save_plot_figures": false,
+    "parallel": true,
     "load_from_grid_file": true,
-    "number_of_packings": 1,
-    "spacing": null,
+    "number_of_packings": 256,
+    "show_progress_bar": true,
+    "spacing": 2.5,
     "use_periodicity": false,
-    "show_sphere_trees": false,
-    "image_export_options": {
-        "hollow": false,
-        "voxel_size": [1,1,1],
-        "projection_axis": "z",
-        "convolution_options": {
-            "psf": "gaussian",
-            "psf_parameters":{
-                "sigma": 3,
-                "size": [5,5,5]
-            }
-        }
-    }
+    "show_sphere_trees": false
 }
