--- a/examples/packing-configs/pcna_parallel_packing_config.json
+++ b/examples/packing-configs/pcna_parallel_packing_config.json
@@ -1,16 +1,20 @@
 {
-    "name": "test_config",
+    "name": "analyze_parallel_convolved",
     "format": "simularium",
     "inner_grid_method": "trimesh",
     "live_packing": false,
     "ordered_packing": false,
-    "out": "cellpack/tests/outputs/",
+    "out": "out",
     "overwrite_place_method": true,
     "place_method": "spheresSST",
     "save_analyze_result": true,
     "show_grid_plot": false,
-    "spacing": null,
-    "parallel": false,
+    "save_plot_figures": false,
+    "parallel": true,
+    "load_from_grid_file": true,
+    "number_of_packings": 256,
+    "show_progress_bar": true,
+    "spacing": 2.5,
     "use_periodicity": false,
-    "show_sphere_trees": true
+    "show_sphere_trees": false
 }
